crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__base_test.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtFunctionDef,
        range: 28..212,
        source: `def test(x, y):⏎`,
    }: {
        "leading": [
            SourceComment {
                text: "# Function Leading comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
    Node {
        kind: ExprCompare,
        range: 51..57,
        source: `x == y`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# if statement end of line comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: StmtIf,
        range: 144..212,
        source: `elif x < y:⏎`,
    }: {
        "leading": [
            SourceComment {
                text: "# Leading comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
    Node {
        kind: StmtExpr,
        range: 234..246,
        source: `test(10, 20)`,
    }: {
        "leading": [
            SourceComment {
                text: "# own line comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
